--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "developer" ]
   pull_request:
-    branches: [ "developer" ]
+    branches: [ "main" ]
 
   workflow_dispatch:
 
