--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,27 +2,29 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "developer" ]
+    branches:
+       "developer"
+
   pull_request:
     branches: [ "main" ]
 
-  workflow_dispatch:
-
-defaults:
-  run:
-    shell: bash
-    working-directory: .
-
-env:
-  CI: true
-  NODE_OPTIONS: --max_old_space_size=4096
-  NODE_ENV: development
-  PORT: 3000
-  HOST: 0.0.0.0
-  BASE_URL: http://localhost:3000
-
-
 jobs:
+
+  restrict-push:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Cancel Push to Main
+        run: exit 1
+
+  allow-pull-request:
+    runs-on: ubuntu-latest
+    if: github.base_ref == 'main' && github.event_name == 'pull_request'
+    steps:
+      - name: Allow Pull Request
+        run: echo "Pull request to main is allowed"
+
+
   build:
 
     runs-on: ubuntu-latest
