--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,12 +3,19 @@ name: Node.js CI
 on:
   push:
     branches:
-       "developer"
+       ["developer"]
 
   pull_request:
     branches: [ "main" ]
 
 jobs:
+
+  restrict-push:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Cancel Push to Main
+        run: exit 1
 
   allow-pull-request:
     runs-on: ubuntu-latest
@@ -16,20 +23,6 @@ jobs:
     steps:
       - name: Allow Pull Request
         run: echo "Pull request to main is allowed"
-
-  restrict-pull-request:
-    runs-on: ubuntu-latest
-    if: github.base_ref != 'main' && github.event_name == 'pull_request'
-    steps:
-      - name: Cancel Pull Request
-        run: exit 1
-
-  restrict-branch:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Cancel Pull Request
-        run: exit 1
 
 
   build:
