--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,11 +2,11 @@ name: Node.js CI
 
 on:
   push:
-    branches:
-       ["developer"]
-
-  pull_request:
-    branches: [ "main" ]
+    branches-ignore:
+      - 'main'
+    pull_request:
+      branches:
+        - 'main'
 
 jobs:
 
