--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,21 +1,14 @@
-name: Node.js CI
+name: Restrict Push and Pull Request
 
 on:
   push:
-    branches-ignore:
+    branches:
+      - 'developer'
+  pull_request:
+    branches:
       - 'main'
-    pull_request:
-      branches:
-        - 'main'
 
 jobs:
-
-  restrict-push:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - name: Cancel Push to Main
-        run: exit 1
 
   allow-pull-request:
     runs-on: ubuntu-latest
@@ -24,21 +17,21 @@ jobs:
       - name: Allow Pull Request
         run: echo "Pull request to main is allowed"
 
-
-  build:
-
+  restrict-push:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [ 18.x ]
-
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Verify push source branch
+        id: check_branch
+        run: |
+          BASE_BRANCH=$(git for-each-ref --format='%(upstream:short)' $(git symbolic-ref -q HEAD))
+          echo "::set-output name=base_branch::${BASE_BRANCH}"
+
+      - name: Restrict push to developer
+        if: steps.check_branch.outputs.base_branch != 'origin/main'
+        run: exit 1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
