--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,23 +23,23 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-#  test:
-#    runs-on: ubuntu-latest
-#    needs: install
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '18.x'
-#
-#      - name: Install dependencies
-#        run: npm ci
-#
-#      - name: Run tests
-#        run: npm test
+  test:
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
 
 #  lint:
 #    runs-on: ubuntu-latest
