--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -79,7 +79,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [test, lint, build]
+    needs: [ build]
     if: github.event_name == 'pull_request'
     steps:
       - name: Checkout code
