--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -89,8 +89,10 @@ jobs:
       - name: Install mailjet_rest
         run: pip install mailjet-rest
 
-  notification: Send email notification
-  steps:
+  notify:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Send email notification
         env:
           MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
