--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,41 +24,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-#  test:
-#    runs-on: ubuntu-latest
-#    needs: install
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '18.x'
-#
-#      - name: Install dependencies
-#        run: npm ci
-#
-#      - name: Run tests
-#        run: npm test
-
-#  lint:
-#    runs-on: ubuntu-latest
-#    needs: install
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '18.x'
-#
-#      - name: Install dependencies
-#        run: npm ci
-#
-#      - name: Run lint
-#        run: npm run lint
 
   build:
     runs-on: ubuntu-latest
@@ -89,10 +54,19 @@ jobs:
       - name: Install mailjet_rest
         run: pip install mailjet-rest
 
-  notify:
-    runs-on: ubuntu-latest
-    needs: build
+  send-email:
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+        python-version: '3.x'
+
+      - name: Install mailjet_rest
+        run: pip install mailjet-rest
+
       - name: Send email notification
         env:
           MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
@@ -118,29 +92,29 @@ jobs:
           subject = f"New Pull Request in {os.environ.get('REPO_NAME')}"
           body = f"Pull Request Title: {os.environ.get('PR_TITLE')}\nURL: {os.environ.get('PR_URL')}\nOpened by: {os.environ.get('PR_USER')}"
 
-          data = {
-            'Messages': [
-              {
-                "From": {
-                  "Email": from_email,
-                  "Name": "GitHub Actions"
-                },
-                "To": [
+              data = {
+                'Messages': [
                   {
-                    "Email": to_email,
-                    "Name": "Repo Owner"
+                    "From": {
+                      "Email": from_email,
+                      "Name": "GitHub Actions"
+                    },
+                    "To": [
+                      {
+                        "Email": to_email,
+                        "Name": "Repo Owner"
+                      }
+                    ],
+                    "Subject": subject,
+                    "TextPart": body
                   }
-                ],
-                "Subject": subject,
-                "TextPart": body
+                ]
               }
-            ]
-          }
 
-          result = mailjet.send.create(data=data)
-          print(result.status_code)
-          print(result.json())
-          EOF
+              result = mailjet.send.create(data=data)
+              print(result.status_code)
+              print(result.json())
+              EOF
 
-          python3 send_email.py
+            python3 send_email.py
 
