--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
   pull_request:
+    types: [ opened, reopened, synchronize ]
     branches:
       - main
 
@@ -20,19 +21,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-#  test:
-#    runs-on: ubuntu-latest
-#    needs: install
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '18.x'
-#      - name: Install dependencies
-#        run: npm ci
-#      - name: Run tests
-#        run: npm test
+  #  test:
+  #    runs-on: ubuntu-latest
+  #    needs: install
+  #    steps:
+  #      - uses: actions/checkout@v3
+  #      - name: Set up Node.js
+  #        uses: actions/setup-node@v3
+  #        with:
+  #          node-version: '18.x'
+  #      - name: Install dependencies
+  #        run: npm ci
+  #      - name: Run tests
+  #        run: npm test
 
   build:
     runs-on: ubuntu-latest
