--- a/angular.json
+++ b/angular.json
@@ -10,6 +10,12 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        "serve": {
+          "options": {
+            "host": "0.0.0.0",
+            "port": 4200
+          }
+        },
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
