--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,11 @@
           "options": {
             "host": "0.0.0.0",
             "port": 4200,
-            "disableHostCheck": true
+           "allowedHosts": [
+             "10.10.0.211",
+             "localhost",
+             "127.0.0.1"
+           ]
           }
         },
         "build": {
