--- a/angular.json
+++ b/angular.json
@@ -10,17 +10,6 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
-        "serve": {
-          "options": {
-            "host": "0.0.0.0",
-            "port": 4200,
-           "allowedHosts": [
-             "10.10.0.211",
-             "localhost",
-             "127.0.0.1"
-           ]
-          }
-        },
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
@@ -72,6 +61,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
